Fix typo in screen.yml.

--- a/.github/workflows/screen.yml
+++ b/.github/workflows/screen.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: 'Take a screenshot'
-        run: ruby screen-today.png
+        run: ruby screen-today.rb
 
       - name: 'Upload screenshot'
         uses: actions/upload-artifact@v2
