--- a/.github/workflows/screen.yml
+++ b/.github/workflows/screen.yml
@@ -15,6 +15,7 @@ jobs:
       - name: 'Upload screenshot'
         uses: actions/upload-artifact@v2
         with:
+          name: screen.png
           path: page.png
           retention-days: 7
 
