--- a/.github/workflows/screen.yml
+++ b/.github/workflows/screen.yml
@@ -3,7 +3,8 @@ name: Screenshot
 on:
   workflow_dispatch:
   schedule:
-    - cron: '15 6 * * *'
+    # 6:15 CET
+    - cron: '15 5 * * *'
 
 env:
   SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
