--- a/.github/workflows/screen.yml
+++ b/.github/workflows/screen.yml
@@ -8,6 +8,9 @@ on:
 
 env:
   SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
+  MATRIX_TEST_HOOK: ${{ secrets.MATRIX_TEST_HOOK }}
+  MATRIX_GM_HOOK: ${{ secrets.MATRIX_GM_HOOK }}
+  FREEIMAGE_KEY: ${{ secrets.FREEIMAGE_KEY }}
 
 jobs:
   build:
@@ -27,9 +30,23 @@ jobs:
           retention-days: 7
 
       - name: 'Post to #test on custom trigger'
-        run: 'curl -F file=@page.png -F"initial_comment=Dobré ráno!" -F channels=C030DNGLEA3 -H "Authorization: Bearer $SLACK_TOKEN" https://slack.com/api/files.upload'
+        run: |
+          curl -F file=@page.png -F"initial_comment=Dobré ráno!" -F channels=C030DNGLEA3 -H "Authorization: Bearer $SLACK_TOKEN" https://slack.com/api/files.upload
+          curl -X POST -H 'Content-Type: application/json' -d "{
+              \"text\": \"Dobré ráno! ($(curl -X POST -Fkey=$FREEIMAGE_KEY -Fsource=@page.png -Fformat=txt 'https://freeimage.host/api/1/upload'))\",
+              \"format\": \"plain\",
+              \"displayName\": \"Dobré Ráno BOT\",
+              \"avatarUrl\": \"https://i.imgur.com/cvp8s19.png\"
+          }" "https://webhooks.t2bot.io/api/v1/matrix/hook/$MATRIX_TEST_HOOK"
         if: ${{ github.event_name == 'workflow_dispatch' }}
 
       - name: 'Post to #dobre-rano on schedule'
-        run: 'curl -F file=@page.png -F"initial_comment=Dobré ráno!" -F channels=C02U77KAHL1 -H "Authorization: Bearer $SLACK_TOKEN" https://slack.com/api/files.upload'
+        run: |
+          curl -F file=@page.png -F"initial_comment=Dobré ráno!" -F channels=C02U77KAHL1 -H "Authorization: Bearer $SLACK_TOKEN" https://slack.com/api/files.upload
+          curl -X POST -H 'Content-Type: application/json' -d "{
+              \"text\": \"Dobré ráno! ($(curl -X POST -Fkey=$FREEIMAGE_KEY -Fsource=@page.png -Fformat=txt 'https://freeimage.host/api/1/upload'))\",
+              \"format\": \"plain\",
+              \"displayName\": \"Dobré Ráno BOT\",
+              \"avatarUrl\": \"https://i.imgur.com/cvp8s19.png\"
+          }" "https://webhooks.t2bot.io/api/v1/matrix/hook/$MATRIX_GM_HOOK"
         if: ${{ github.event_name == 'schedule' }}
