--- a/.github/workflows/screen.yml
+++ b/.github/workflows/screen.yml
@@ -3,8 +3,10 @@ name: Screenshot
 on:
   workflow_dispatch:
   schedule:
-    # 6:15 CEST
-    - cron: '15 4 * * *'
+    # 6:15 CEST Mon-Fri
+    - cron: '15 4 * * 1-5'
+    # 12:00 CEST Mon-Fri
+    - cron: '0 10 * * 1-5'
 
 env:
   SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
@@ -29,7 +31,16 @@ jobs:
         working-directory: 'server'
         run: 'bundle exec rackup -p 9292 &'
 
-      - name: 'Take a screenshot'
+      - name: 'Take a good-morning screenshot'
+        if: ${{ (github.event_name == 'workflow_dispatch') || (github.event.schedule == '15 4 * * 1-5') }}
+        env:
+          DR_BACKEND_URL: 'http://localhost:9292/today/good_morning'
+        run: ruby screen-today.rb
+
+      - name: 'Take a home-alone screenshot'
+        if: ${{ (github.event_name == 'workflow_dispatch') || (github.event.schedule == '0 10 * * 1-5') }}
+        env:
+          DR_BACKEND_URL: 'http://localhost:9292/today/home_alone'
         run: ruby screen-today.rb
 
       - name: 'Upload screenshot'
@@ -45,7 +56,7 @@ jobs:
           curl -X POST -H 'Content-Type: application/json' -d "{
               \"text\": \"Dobré ráno! ($(curl -X POST -Fkey=$FREEIMAGE_KEY -Fsource=@page.png -Fformat=txt 'https://freeimage.host/api/1/upload'))\",
               \"format\": \"plain\",
-              \"displayName\": \"Dobré Ráno BOT\",
+              \"displayName\": \"Dobré Ráno BOT 2.0\",
               \"avatarUrl\": \"https://i.imgur.com/cvp8s19.png\"
           }" "https://webhooks.t2bot.io/api/v1/matrix/hook/$MATRIX_TEST_HOOK"
         if: ${{ github.event_name == 'workflow_dispatch' }}
@@ -56,7 +67,7 @@ jobs:
           curl -X POST -H 'Content-Type: application/json' -d "{
               \"text\": \"Dobré ráno! ($(curl -X POST -Fkey=$FREEIMAGE_KEY -Fsource=@page.png -Fformat=txt 'https://freeimage.host/api/1/upload'))\",
               \"format\": \"plain\",
-              \"displayName\": \"Dobré Ráno BOT\",
+              \"displayName\": \"Dobré Ráno BOT 2.0\",
               \"avatarUrl\": \"https://i.imgur.com/cvp8s19.png\"
           }" "https://webhooks.t2bot.io/api/v1/matrix/hook/$MATRIX_GM_HOOK"
         if: ${{ github.event_name == 'schedule' }}
