--- a/.github/actions/screenshot/action.yml
+++ b/.github/actions/screenshot/action.yml
@@ -23,13 +23,13 @@ runs:
   - uses: ruby/setup-ruby@v1
     with:
       working-directory: 'server'
-      ruby-version: '3.1'
+      ruby-version: '3.3'
       bundler-cache: true
 
   - name: 'Start internal server'
     shell: bash
     working-directory: 'server'
-    run: 'bundle exec rackup -p 9292 &'
+    run: 'bin/rackup -p 9292 &'
 
   - name: 'Take a screenshot'
     shell: bash
@@ -38,7 +38,7 @@ runs:
     run: ruby screen-today.rb
 
   - name: 'Upload screenshot'
-    uses: actions/upload-artifact@v2
+    uses: actions/upload-artifact@v4
     with:
       name: screen.png
       path: page.png
