--- a/.github/actions/screenshot/action.yml
+++ b/.github/actions/screenshot/action.yml
@@ -23,22 +23,22 @@ runs:
   - uses: ruby/setup-ruby@v1
     with:
       working-directory: 'server'
-      ruby-version: '3.1'
+      ruby-version: '3.3'
       bundler-cache: true
 
   - name: 'Start internal server'
     shell: bash
     working-directory: 'server'
-    run: 'bundle exec rackup -p 9292 &'
+    run: 'bin/rackup -p 9292 -D'
 
   - name: 'Take a screenshot'
     shell: bash
     env:
       DR_BACKEND_URL: ${{ inputs.dr_url }}
-    run: ruby screen-today.rb
+    run: "sleep 10 && ruby screen-today.rb"
 
   - name: 'Upload screenshot'
-    uses: actions/upload-artifact@v2
+    uses: actions/upload-artifact@v4
     with:
       name: screen.png
       path: page.png
